syntax = "proto3";  

service DIDAProcessCreationService {   
	rpc sendProcess(DIDAProcessSendRequest) returns (DIDAProcessSendReply);
	rpc crashServer(DIDACrashRequest) returns (DIDACrashReply);
} 

message DIDAProcessSendRequest {     
	string fileName = 1;
	string args = 2;
}  

message DIDAProcessSendReply {
	string ack = 1;
}

message DIDACrashRequest {
	string serverId = 1;
}

message DIDACrashReply {
	string ack = 1;
}